--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,13 +6,33 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <TextView
+
+    <Button
+        android:id="@+id/my_chat_btn"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:text="@string/mychat"/>
+
+    <Button
+        android:id="@+id/my_contacts"
+        app:layout_constraintTop_toBottomOf="@id/my_chat_btn"
+        app:layout_constraintStart_toStartOf="@id/my_chat_btn"
+        app:layout_constraintEnd_toEndOf="@id/my_chat_btn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/mycontacts"/>
+
+    <Button
+        android:id="@+id/my_notes"
+        app:layout_constraintTop_toBottomOf="@id/my_contacts"
+        app:layout_constraintStart_toStartOf="@id/my_contacts"
+        app:layout_constraintEnd_toEndOf="@id/my_contacts"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/mynotes"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
