--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -7,7 +7,7 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="bgColor">#FFFFFFFF</color>
-    <color name="textColor">#FFFFFFFF</color>
-    <color name="edit_text_solid">#C9D8D5</color>
+    <color name="bgColor">#212121</color>
+    <color name="textColor">#FF000000</color>
+    <color name="edit_text_solid">#084E40</color>
 </resources>
